@@ -7,6 +7,8 @@
   * Quiet a debug printing rspecs (#858)
   * In WiMAX, handle user swith no sn or givenName. Also fix a logic error
     causing projects to seem not WiMAX enabled. (#859)
+  * Slice names are now unique only to the project, since ProtoGENI
+  made a fix (#433)
 
 == 2.4 ==
   * Fix geni-revoke-member-privileges script (#716)
